--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,23 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+input {
+  background-color: #d1ced0ce !important;
+  color: black
+}
+
+label {
+  color: black;
+  font-weight: 600;
+}
+#name {
+  margin: 0.4rem 0;
+}
+#file {
+  margin-top: 0.5rem;
+}
+
+
 a {
   color: inherit;
   text-decoration: none;
@@ -15,12 +32,16 @@ a {
   box-sizing: border-box;
 }
 
+
+
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
   body {
-    color: white;
-    background: black;
+    color: black;
+    background-color: #00dbde;
+    background-image: linear-gradient(90deg, #00dbde 0%, #fc00ff 100%);
   }
 }
