--- a/styles/globals.css
+++ b/styles/globals.css
@@ -37,7 +37,6 @@ a {
   }
   body {
     color: black;
-    background-color: #00dbde;
-    background-image: linear-gradient(90deg, #00dbde 0%, #fc00ff 100%);
+    background-color: #011e3c;
   }
 }
